# mcp_playwright_scraper

./: README.md  app.yaml  pyproject.toml  requirements.txt
mcp_playwright_scraper/: server.py
