[project]
name = "mcp-playwright-scraper"
version = "0.1.0"
description = "A MCP server that scrapes web content to markdown using Playwright"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.2",
    "playwright",
    "pypandoc",
    "beautifulsoup4"
]
[[project.authors]]
name = "Dennis Lin"
email = "me@dennislin.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_playwright_scraper"]

[project.scripts]
mcp-playwright-scraper = "mcp_playwright_scraper:main"